@@ -1,0 +1,20 @@
+[all]
+php.display_errors         = 1
+php.display_startup_errors = 1
+php.date.timezone          = "America/Montreal"
+
+front.allow_internal_controllers = 1
+front.default_controller = "pkwelcome"
+front.error_controller   = "pkerror"
+
+view.engine    = "Layouts"
+
+[development]
+
+[testing]
+
+[staging]
+
+[production]
+php.display_errors         = 0
+php.display_startup_errors = 0
