@@ -35,10 +35,17 @@ class Peak_Config_Ini extends Peak_Config
 		if(!file_exists($file)) throw new Peak_Exception('ERR_CUSTOM', __CLASS__.' has tried to load non-existent ini file');
 		else {
 			$ini = @parse_ini_file($file, $process_sections);
-			//php 5.2.7
+			
+			//(php 5.2.7+) since parse_ini_file() can return false in case of error
+			//but this can mean also that the file is only empty, so we don't want to throw a exception in this case
+			
 			if((version_compare(PHP_VERSION, '5.2.7') >= 0) && ($ini == false)) {
-				throw new Peak_Exception('ERR_CUSTOM', __CLASS__.': syntax error(s) in your configuration file');
+				//check if the file just empty
+				if(trim(file_get_contents($file)) !== '') {
+					throw new Peak_Exception('ERR_CUSTOM', __CLASS__.': syntax error(s) in your configuration file');
+				}
 			}
+			
 			return $this->_load($ini, $process_sections, $section_name);
 		}
 	}
